data/derived/fa15/progs/unify/prog1372.ml.out
Characters 230-231:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type int list -> int -> int list * int list
       but an expression was expected of type int list -> int -> int list
       Type int list * int list is not compatible with type int list 
